# unstructured-platform-plugins

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
requirements/: cli.in  cli.txt  constraints.txt  lint.in  lint.txt  release.txt  test.txt  validate.txt
scripts/: pip-compile.sh  version-sync.sh
test/: test_json_schema.py  test_otel.py  test_schema.py  test_signal_handlers.py  test_utils.py  test_yaml.py
test/api/: test_api.py
test/assets/: async_typed_dict_response.py  dataclass_response.py  empty_input_and_response.py  exception_status_code.py  filedata_meta.py  hash_function.py  improper_function.py  pydantic_response_class_method.py  simple_hash_class.py  simple_hash_lambda.py  simple_hash_value.py  typed_dict_response.py
test/expected_results/: simple.yaml
unstructured_platform_plugins/: __init__.py  __version__.py  exceptions.py  type_hints.py  validate_api.py
unstructured_platform_plugins/cli/: utils.py
unstructured_platform_plugins/cli/etl_uvicorn/: api_generator.py  main.py
unstructured_platform_plugins/cli/schema_yaml/: main.py  yaml_generator.py
unstructured_platform_plugins/etl_uvicorn/: api_generator.py  errors.py  example.py  fastapi.py  json_schema.py  main.py  otel.py  utils.py
unstructured_platform_plugins/schema/: __init__.py  filedata_meta.py  json_schema.py  model.py  usage.py  utils.py
