[project]
name = "unstructured_platform_plugins"
description = ""
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
dependencies = [
    "requests",
    "click",
    "uvicorn",
    "fastapi",
    "click",
    "unstructured-ingest",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp-proto-grpc",
]
dynamic = [
 "version",
]

[tool.hatch.version]
path = "unstructured_platform_plugins/__version__.py"

[dependency-groups]
release = [
    "twine",
    "wheel"
]
lint = [
    "ruff",
]
test = [
    "pytest",
    "httpx",
    "pytest-cov"
]

[project.scripts]
etl-uvicorn = "unstructured_platform_plugins.etl_uvicorn.main:cmd"
etl-validate = "unstructured_platform_plugins.validate_api:validate_api"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
# TODO: improve this
fail_under = 15
